# quark_transfer

./: .gitignore  LICENSE  README.md  batch.csv  pyproject.toml
docs/superpowers/plans/: 2026-05-17-quark-download-cli.md  2026-05-18-batch-csv-s3-transfer.md
docs/superpowers/specs/: 2026-05-17-quark-download-cli-design.md
src/quark_transfer/: api.py  auth.py  batch.py  cli.py  config.py  downloader.py  errors.py  meta.py  models.py  planner.py  rate_limit.py  resolver.py  s3.py
tests/: test_api.py  test_auth.py  test_batch.py  test_cli.py  test_config.py  test_downloader.py  test_meta.py  test_planner.py  test_rate_limit.py  test_resolver.py  test_s3.py
